<resources>
    <string name="app_name">CHECKLIST-ANDROID-APP</string>
    <string name="navigation_drawer_open">Open navigation drawer</string>
    <string name="navigation_drawer_close">Close navigation drawer</string>
    <string name="nav_header_title">Travel Checklist</string>
    <string name="nav_header_subtitle">Your Smart Packing Companion</string>
    <string name="nav_header_desc">Navigation header</string>
    <string name="action_settings">Settings</string>

    <string name="menu_home">Home</string>
    <string name="menu_newtrips">New Trips</string>
    <string name="new_trip_title">Trip Details</string>
    <string name="step_format">Step %1$d/3</string>
    <string name="button_previous">Previous</string>
    <string name="button_next">Next</string>
    <string name="button_generate">Generate Checklist</string>
    <string name="select_dates">Select Travel Dates</string>
    <!-- <string name="menu_mychecklists">My Checklists</string> -->
    <string name="menu_savedtrips">Saved Trips</string>
    <string name="search_trips_hint">Search saved trips...</string>
    <string name="no_trips_found">No trips found</string>
    <string name="no_saved_trips">You haven\'t saved any trips yet</string>
    <string name="create_new_trip">Create New Trip</string>
    <string name="menu_settings">Settings</string>
    
    <string name="menu_help">Help</string>
    <string name="tab_faq">FAQ</string>
    <string name="tab_contact">Contact Us</string>
    <string name="help_title">Help &amp; Support</string>
    <string name="help_description">Get assistance with your travel planning</string>
    <string name="contact_submit">Submit</string>
    <string name="contact_name_hint">Name</string>
    <string name="contact_email_hint">Email</string>
    <string name="contact_subject_hint">Subject</string>
    <string name="contact_message_hint">Message</string>
    <string name="message_sent">Message sent successfully</string>
    <string name="message_error">Error sending message. Please try again.</string>

    <string name="menu_emptylist">Empty List</string>

    <!-- FAQ Section -->
    <string name="faq_title">Frequently Asked Questions</string>
    <string name="faq_empty">No FAQs available</string>
    <string-array name="faq_questions">
    <item>How do I create a new checklist?</item>
    <item>How do I sync my data across devices?</item>
    <item>Can I backup my checklists?</item>
    <item>How do I upgrade to premium?</item>
    </string-array>
    <string-array name="faq_answers">
    <item>Tap the + button on the home screen and select "New Checklist".</item>
    <item>Enable Cloud Sync in Settings to sync across your devices.</item>
    <item>Go to Settings > Backup to enable automatic backups.</item>
    <item>Go to Settings > Account and tap "Upgrade to Premium".</item>
    </string-array>


</resources>
