<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    tools:showIn="navigation_view">

    <group android:checkableBehavior="single">
        <item
            android:id="@+id/nav_home"
            android:icon="@drawable/ic_menu_camera"
            android:title="@string/menu_home" />
        <item
            android:id="@+id/nav_newtrips"
            android:icon="@drawable/ic_menu_newtrips"
            android:title="@string/menu_newtrips" />
        <item
            android:id="@+id/nav_mychecklists"
            android:icon="@drawable/ic_menu_mychecklists"
            android:title="@string/menu_mychecklists" />

        <item
            android:id="@+id/nav_savedtrips"
            android:icon="@drawable/ic_menu_savedtrips"
            android:title="@string/menu_savedtrips" />

         <item
            android:id="@+id/nav_settings"
            android:icon="@drawable/ic_menu_settings"
            android:title="@string/menu_settings" />

        <item
            android:id="@+id/nav_help"
            android:icon="@drawable/ic_menu_help"
            android:title="@string/menu_help" />
    </group>
</menu>
