<?xml version="1.0" encoding="utf-8"?>
<navigation xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/mobile_navigation"
    app:startDestination="@+id/nav_home">

    <fragment
        android:id="@+id/nav_home"
        android:name="com.example.checklist_android_app.ui.home.HomeFragment"
        android:label="@string/menu_home"
        tools:layout="@layout/fragment_home" />

    <fragment
        android:id="@+id/nav_savedtrips"
        android:name="com.example.checklist_android_app.ui.savedtrips.SavedTripsFragment"
        android:label="@string/menu_savedtrips"
        tools:layout="@layout/fragment_saved_trips">
        <action
            android:id="@+id/action_nav_savedtrips_to_newtrip"
            app:destination="@id/nav_newtrips" />
    </fragment>

    <fragment
        android:id="@+id/nav_newtrips"
        android:name="com.example.checklist_android_app.ui.newtrips.NewTripsFragment"
        android:label="@string/menu_newtrips"
        tools:layout="@layout/fragment_newtrips" />

    <!-- <fragment
        android:id="@+id/nav_mychecklists"
        android:name="com.example.checklist_android_app.ui.mychecklists.MyCheckListsFragment"
        android:label="@string/menu_mychecklists"
        tools:layout="@layout/fragment_my_checklists" /> -->

    <fragment
        android:id="@+id/nav_emptylist"
        android:name="com.example.checklist_android_app.ui.emptylist.EmptyListFragment"
        android:label="@string/menu_emptylist"
        tools:layout="@layout/fragment_emptylist" />

    <fragment
        android:id="@+id/nav_settings"
        android:name="com.example.checklist_android_app.ui.settings.SettingsFragment"
        android:label="@string/menu_settings"
        tools:layout="@layout/fragment_settings" />

    <fragment
        android:id="@+id/nav_help"
        android:name="com.example.checklist_android_app.ui.help.HelpFragment"
        android:label="@string/menu_help"
        tools:layout="@layout/fragment_help" />
        
</navigation>
